dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dev
spec: 
  selector:
    app: app-deploy
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
type: ClusterIP
